--- a/index.html
+++ b/index.html
@@ -146,7 +146,10 @@
                     <div class="experience-dot"></div>
                     <div class="experience-date">February 2020 - Present · 5 years 10 months</div>
                     <h3 class="experience-title">Chief Executive Officer</h3>
-                    <div class="experience-company">Software Shark Tech Pvt Ltd | Geotrack</div>
+                    <div class="experience-company"><a href="https://www.softwaresharktech.com" target="_blank"
+                            rel="noopener noreferrer">Software Shark Tech Pvt Ltd</a> | <a
+                            href="https://www.geotrack.com.np" target="_blank" rel="noopener noreferrer">Geotrack</a>
+                    </div>
                     <p class="experience-description">
                         Leading the company's strategic vision and operations, driving growth and innovation in
                         GPS tracking and IoT solutions. Under my leadership, we've grown to serve over 3000 clients
@@ -160,7 +163,8 @@
                     <div class="experience-dot"></div>
                     <div class="experience-date">September 2025 - Present · 3 months</div>
                     <h3 class="experience-title">Managing Director</h3>
-                    <div class="experience-company">Info Shark Tech Pty Ltd · Tasmania, Australia · Hybrid</div>
+                    <div class="experience-company"><a href="https://www.infosharktech.com" target="_blank"
+                            rel="noopener noreferrer">Info Shark Tech Pty Ltd</a> · Tasmania, Australia · Hybrid</div>
                     <p class="experience-description">
                         Expanding our technological footprint into the Australian market, managing operations
                         and establishing strategic partnerships to deliver innovative technology solutions.
