added the favicon link to both index.html and blog.html

--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Insights on technology, leadership, and entrepreneurship by Manish Lama">
     <title>Blog - Manish Lama</title>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/images/favicon.png">
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
