--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
     <title>Manish Lama - CEO at Software Shark Tech | Technology Leader</title>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/images/favicon.png">
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
